SILGen: Fix emission of stored property initializers from different files

Fixes <https://bugs.swift.org/browse/SR-2982>.